# vsynth

./: CMakeLists.txt  GITHUB_RELEASE_GUIDE.md  INSTALL.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  RELEASE_NOTES.md  build.sh  install.sh  release.sh
.github/workflows/: release.yml
include/vsynth/: ADSREnvelope.h  AudioEngine.h  Effects.h  FFTAnalyzer.h  KeyboardWidget.h  MainWindow.h  Oscillator.h  Recorder.h  Synthesizer.h
package/: DISTRIBUTION_GUIDE.md  LICENSE.txt  build_macos.sh  build_windows.bat  vsynth_installer.nsi
src/: ADSREnvelope.cpp  AudioEngine.cpp  Effects.cpp  FFTAnalyzer.cpp  KeyboardWidget.cpp  MainWindow.cpp  Oscillator.cpp  Recorder.cpp  Synthesizer.cpp  main.cpp
